--- a/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
@@ -5,6 +5,8 @@
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/Main/main.js")"></script>
+    <script src="@Url.Content("~/Scripts/vk_up_button/vk_up_back.js")"></script>
+    <script src="@Url.Content("~/Scripts/vk_up_button/button.js")"></script>
     @RenderSection("head", required:false)
 </head>
     <body>
@@ -28,5 +30,8 @@
         <div class="footer">
         </div>
         <div class="opacity"></div>
+        <div id="top-link">
+	        <a href="#top">Наверх</a>
+        </div>
     </body>
 </html>
