--- a/broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
@@ -13,7 +13,8 @@
 	<script src="@Url.Content("~/Scripts/fancybox/jquery.fancybox-buttons.js")"></script>
 	<script src="@Url.Content("~/Scripts/fancybox/jquery.fancybox-thumbs.js")"></script>
     <script src="@Url.Content("~/Scripts/fancybox/jquery.easing-1.3.pack.js")"></script>
-	<script src="@Url.Content("~/Scripts/fancybox/jquery.mousewheel-3.0.6.pack.js")"></script>
+    <script src="@Url.Content("~/Scripts/fancybox/jquery.mousewheel-3.0.6.pack.js")"></script>
+    <script src="@Url.Content("~/Scripts/vk_up_button/button.js")"></script>
 
     @RenderSection("head", required:false)
 </head>
@@ -38,8 +39,8 @@
         <div class="footer">
         </div>
         <div class="opacity"></div>
-        <script type="text/javascript">
-        	
-		</script>
+        <div id="top-link">
+	        <a href="#top">Наверх</a>
+        </div>
     </body>
 </html>
