--- a/broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                     <a href="@Url.Action("Index", "Home")" class="logo-text">Broccoli<br />Trade</a>
                 </div>
             </div>
+            <div class="white-line">
+                @Html.Partial("MainMenu")
+            </div>
             <div class="light-line">
                 <div class="secondary-menu">
                     @Html.Partial("Menu")
