--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -33,36 +33,40 @@
             <div id="slider1" class="csw">
                 <div class="panelContainer">
                     <div class="panel" title="Первая панель">
-                        <div class="instructions">
-                            <h3>Схема работы. Видео инструкция:</h3>
-                            <div class="gal">
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            </div>
+                        <h3>Схема работы. Видео инструкция:</h3>
+                        <div class="gal">
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
                         </div>
+                        <span class="button">
+                            <a href="@Url.Action("RegisterForm", "Account")" target="_blank"><input id="regLink" class="large" type="button" value="Регистрация" /></a>
+                        </span>
                     </div>
                     <div class="panel" title="Вторая панель">
-                        <div class="instructions">
-                            <h3>Схема работы. Видео инструкция:</h3>
-                            <div class="gal">
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                                <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/ZeStnz5c2GI?fs=1&amp;autoplay=1"><img src="@Url.Content("~/Content/img/img2s.jpg")"></a>
-                            </div>
-                        </div>
+                        <table class="open-account-instructions hr-shadow">
+                            <tr>
+                                <td class="description">
+                                    <h3>Откройте свой счет!</h3>
+                                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                </td>
+                                <td class="broker">
+                                    <div>
+                                        <img src="@Url.Content("~/Content/img/broker-logo.png")"/>
+                                        <span class="button">
+                                            <a href="http://www.forexinn.ru/register/a/broccoli" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
+                                        </span>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
