--- a/broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
@@ -42,8 +42,10 @@
         <div class="footer">
         </div>
         <div class="opacity"></div>
-        <div id="top-link">
-	        <a href="#top">Наверх</a>
+        <div id="top-link-full">
+            <div id="top-link">
+                <a href="#top">Наверх</a>
+            </div>
         </div>
     </body>
 </html>
