--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/CabinetMenu.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/CabinetMenu.cshtml
@@ -1,5 +1,6 @@
 ﻿<td class="cabinet-menu">
     <h5 onclick="window.location = '@Url.Action("Index", "PersonalCabinet")'">Личный кабинет</h5>
+    <h5 onclick="window.location = '@Url.Action("Statistics", "PersonalCabinet")'">Статистика</h5>
     <h4>Счета</h4>
         <h5>Открыть счет</h5>
         <h5 onclick="window.location = '@Url.Action("ActivateAccount", "PersonalCabinet")'">Активировать счет</h5>
