--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/OrderStatus.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/OrderStatus.cshtml
@@ -4,6 +4,10 @@
 }
 @model BroccoliTrade.Web.BroccoliMvc.Models.PersonalCabinet.TradingSystemListPoco
 
+@section head {
+    <script type="text/javascript" src="@Url.Content("~/Scripts/PersonalCabinet/cabinet.js")"></script>
+}
+
 <div class="banner small">
     <div class="action">
         <font>Личный кабинет</font>
