--- a/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
@@ -4,8 +4,7 @@
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/Main/main.js")"></script>
-    <script src="@Url.Content("~/Scripts/vk_up_button/vk_up_back.js")"></script>
+    <script src="@Url.Content("~/Scripts/Main/main.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/vk_up_button/button.js")"></script>
     @RenderSection("head", required:false)
 </head>
