--- a/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
@@ -3,7 +3,9 @@
 <head>
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/themes/jquery-ui/jquery-ui-1.9.2.custom.css")" />
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-ui-1.8.20.min.js")"></script>
     <script src="@Url.Content("~/Scripts/Main/main.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/vk_up_button/button.js")"></script>
     @RenderSection("head", required:false)
