--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/Statistics.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/Statistics.cshtml
@@ -5,7 +5,9 @@
 @model BroccoliTrade.Web.BroccoliMvc.Models.PersonalCabinet.StatisticsListPoco
 
 @section head {
-    <script type="text/javascript" src="@Url.Content("~/Scripts/tablesorter/jquery.tablesorter.min.js")"></script>
+    <link rel="stylesheet" href="@Url.Content("~/Content/themes/jquery-ui/jquery-ui-1.9.2.custom.css")" />
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-ui-1.8.20.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/tablesorter/stupidtable.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/PersonalCabinet/statistics.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/amcharts/amcharts.js")"></script>
 }
@@ -21,45 +23,156 @@
             @Html.Partial("CabinetMenu")
             <td class="cabinet-main">
                 <h3 class="mrg-top-bottom20">Статистика приглашений</h3>
+                <div class="period-radio">
+                    <div id="radio">
+                        @if (ViewBag.Period == "today")
+                        {
+                            <input type="radio" id="radio1" name="radio-period" value="today" checked="checked" />
+                            <label for="radio1">Сегодня</label>
+                        }
+                        else
+                        {
+                            <input type="radio" id="radio1" name="radio-period" value="today" />
+                            <label for="radio1">Сегодня</label>
+                        }
+
+                        @if (ViewBag.Period == "yesterday")
+                        {
+                            <input type="radio" id="radio2" name="radio-period" value="yesterday" checked="checked" />
+                            <label for="radio2">Вчера</label>
+                        }
+                        else
+                        {
+                            <input type="radio" id="radio2" name="radio-period" value="yesterday" />
+                            <label for="radio2">Вчера</label>
+                        }
+
+                        @if (ViewBag.Period == "week")
+                        {
+                            <input type="radio" id="radio3" name="radio-period" value="week" checked="checked" />
+                            <label for="radio3">Неделя</label>
+                        }
+                        else
+                        {
+                            <input type="radio" id="radio3" name="radio-period" value="week" />
+                            <label for="radio3">Неделя</label>
+                        }
+
+                        @if (ViewBag.Period == "month")
+                        {
+                            <input type="radio" id="radio4" name="radio-period" value="month" checked="checked" />
+                            <label for="radio4">Месяц</label>
+                        }
+                        else
+                        {
+                            <input type="radio" id="radio4" name="radio-period" value="month" />
+                            <label for="radio4">Месяц</label>
+                        }
+
+                        @if (ViewBag.Period == "allTime")
+                        {
+                            <input type="radio" id="radio5" name="radio-period" checked="checked" />
+                            <label for="radio5">Все время</label>
+                        }
+                        else
+                        {
+                            <input type="radio" id="radio5" name="radio-period" />
+                            <label for="radio5">Все время</label>
+                        }
+                    </div>
+                    <span class="period-date">
+                        <span>С:</span><input id="dateFrom" type="text"/>
+                        <span>По:</span><input id="dateTo" type="text"/>
+                        <button id="showByDate">Показать</button>
+                    </span>
+                </div>
                 <table id="accountsTable" class="grid">
                     <thead>
-                        <tr>
-                            <th>Откуда</th>        
-                            <th>Гостей</th>
-                            <th>Зарегистрировались</th>
+                        <tr id="sort">
+                            <th data-sort="string" class="theader">Откуда</th>        
+                            <th data-sort="int" class="guests theader">Гостей</th>
+                            <th data-sort="int" class="registered theader">Зарегистрировались</th>
                         </tr>
                     </thead>
                     <tfoot>
                         <tr class="bold">
-                            <td>Всего</td>
-                            <td>@Model.TotalGuests</td>
-                            <td>@Model.TotatlRegistered</td>
+                            <td class="hosts">Всего</td>
+                            <td class="guests">@Model.TotalGuests</td>
+                            <td class="registered">@Model.TotatlRegistered</td>
                         </tr>
                     </tfoot>
-                    @foreach (var referrer in Model.Statistics)
-                    {
-                        <tr>
-                            <td>@referrer.HostName</td>        
-                            <td>@referrer.GuestsCount</td>
-                            <td>@referrer.RegisteredCount</td>
-                        </tr>
-                    }
-                    <tr>
-                        <td>прочие*</td>
-                        <td>@Model.FromOtherHostGuestsCount</td>
-                        <td>@Model.FromOtherHostsRegisteredCount</td>
-                    </tr>
+                    <tbody>
+                        @foreach (var group in Model.Statistics)
+                        {
+                            <tr>
+                                
+                                    @if (group.HostName == "прочие*")
+                                    {
+                                        <td class="hosts" group="@group.HostName.Replace(".", string.Empty)">
+                                            <span>&nbsp;&nbsp;&nbsp;</span>
+                                            @group.HostName
+                                        </td>
+                                    }
+                                    else
+                                    {
+                                        <td class="group hosts" group="@group.HostName.Replace(".", string.Empty)">
+                                            <span class="plus-minus">+&nbsp;</span>
+                                            <a>@group.HostName</a>
+                                        </td> 
+                                    }
+                                        
+                                <td class="guests">@group.GuestsCount</td>
+                                <td class="registered">@group.RegisteredCount</td>
+                            </tr>
+                            <tr class="@group.HostName.Replace(".", string.Empty) non-hovered subgrid" style="display: none;">
+                                <td colspan="3">
+                                    <table class="grid">
+                                        <thead>
+                                            <tr>
+                                                <th data-sort="string" class="theader">Ссылка</th>
+                                                <th data-sort="int" class="guests theader">Гостей</th>
+                                                <th data-sort="int" class="registered theader">Зарегистрировались</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @foreach (var referrer in group.DetailsHosts)
+                                            {
+                                                <tr>
+                                                    <td class="hosts"><a href="@referrer.FullReferrerUrl" target="_blank">@referrer.FullReferrerUrl</a></td>
+                                                    <td class="guests">@referrer.GuestsCount</td>
+                                                    <td class="registered">@referrer.RegisteredCount</td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
                 </table>
                 <br/>
                 <p>*Переходы с защищенным соединением, прочие переходы по ссылкам не с сайтов.</p>
                 <br/>
-                <div id="chartdiv" style="width:640px; height:400px;"></div>
+                <div id="chartdiv" style="width:640px; height:400px;"><span></span></div>
+                <div id="radioPieChart" class="type-user-radio">
+                    <input type="radio" id="radio6" name="radio-pie-chart" value="GuestsCount" checked="checked" /><label for="radio6">Гости</label>
+                    <input type="radio" id="radio7" name="radio-pie-chart" value="RegisteredCount" /><label for="radio7">Зарегиситрировались</label>
+                </div>
                 <br/>
                 <div id="chartdiv2" style="width:640px; height:400px;"></div>
             </td>
         </tr>
     </table>
 </div>
+<script>
+    var chartData = @(new HtmlString(Json.Encode(Model.Statistics)));
+    
+</script>
 <script type="text/javascript">
     document.deleteUrl = "@Url.Action("DeleteAccount", "PersonalCabinet")";
+    document.statisticsToday = "@Url.Action("Statistics", "PersonalCabinet", new { period = "today" })";
+    document.statisticsYesterday = "@Url.Action("Statistics", "PersonalCabinet", new { period = "yesterday" })";
+    document.statisticsWeek = "@Url.Action("Statistics", "PersonalCabinet", new { period = "week" })";
+    document.statisticsMonth = "@Url.Action("Statistics", "PersonalCabinet", new { period = "month" })";
+    document.statisticsAllTime = "@Url.Action("Statistics", "PersonalCabinet")";
 </script>
