--- a/broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="@Url.Content("~/Content/themes/fancybox/jquery.fancybox-buttons.css")">
     <link rel="stylesheet" href="@Url.Content("~/Content/themes/fancybox/jquery.fancybox-thumbs.css")">
     <link rel="stylesheet" href="@Url.Content("~/Content/themes/fancybox/jquery.fancybox.css")">
-    <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+    <link rel="stylesheet" href="@Url.Content("~/Content/themes/jquery-ui/jquery-ui-1.9.2.custom.css")" />
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-ui-1.8.20.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-ui-1.8.20.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/Main/main.js")"></script>
     <!-- FancyBox -->
 	<script src="@Url.Content("~/Scripts/fancybox/jquery.fancybox.js")"></script>
